# ligo.skymap

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs-conda.yml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  docs-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.gitlab/: benchmark.sh  combine-coverage.py
cextern/lalsuite/: detresponse.h
cextern/numpy/: logaddexp.h
docs/: bayestar-localize-coincs.rst  bayestar-localize-lvalert.rst  command.rst  conf.py  develop.rst  distance.rst  events.rst  hdf5.rst  healpix_tree.rst  help.rst  index.rst  install.rst  interface.rst  kde.rst  ligo-skymap-from-samples.rst  ligo-skymap-plot-found-injections.rst  ligo-skymap-plot-volume.rst  moc.rst  numpy.rst  performance.rst  postprocess.rst  testing.rst
docs/_static/: coinc.xml  fix-sidebar-textwrap.css
docs/bayestar/: ez_emcee.rst  index.rst  interpolation.rst
docs/healpix_tree/: index.rst
docs/io/: events.rst  hdf5.rst
docs/ligo/skymap/: bayestar.rst  distance.rst  eigenframe.rst  index.rst  kde.rst  moc.rst  postprocess.rst
docs/ligo/skymap/bayestar/: ez_emcee.rst  filter.rst
docs/ligo/skymap/coordinates/: detector.rst  eigenframe.rst  index.rst
docs/ligo/skymap/io/: events.rst  fits.rst  hdf5.rst  index.rst
docs/ligo/skymap/plot/: allsky.rst  backdrop.rst  index.rst  marker.rst  pp.rst
docs/ligo/skymap/postprocess/: contour.rst  detector_frame.rst  ellipse.rst  find_injection.rst  index.rst  util.rst
docs/ligo/skymap/tool/: bayestar_inject.rst  bayestar_localize_coincs.rst  bayestar_localize_lvalert.rst  bayestar_realize_coincs.rst  bayestar_sample_model_psd.rst  index.rst  ligo_skymap_aggregate_found_injections.rst  ligo_skymap_combine.rst  ligo_skymap_contour.rst  ligo_skymap_contour_moc.rst  ligo_skymap_from_samples.rst  ligo_skymap_plot.rst  ligo_skymap_plot_airmass.rst  ligo_skymap_plot_observability.rst  ligo_skymap_plot_stats.rst  ligo_skymap_plot_volume.rst  ligo_skymap_stats.rst
docs/ligo/skymap/util/: file.rst  index.rst  numpy.rst  sqlite.rst
docs/moc/: index.rst
docs/plot/: allsky.rst  backdrop.rst  bayes_factor.rst  marker.rst  poly.rst
docs/postprocess/: contour.rst  cosmology.rst  crossmatch.rst  util.rst
docs/quickstart/: bayestar-injections.rst  install.rst
docs/tool/: bayestar_inject.rst  bayestar_localize_lvalert.rst  bayestar_mcmc.rst  index.rst  ligo_skymap_combine.rst  ligo_skymap_constellations.rst  ligo_skymap_flatten.rst  ligo_skymap_plot.rst  ligo_skymap_plot_airmass.rst  ligo_skymap_plot_coherence.rst  ligo_skymap_plot_observability.rst  ligo_skymap_plot_stats.rst  ligo_skymap_plot_volume.rst  ligo_skymap_stats.rst  ligo_skymap_unflatten.rst
docs/util/: file.rst  ilwd.rst  numpy.rst  sqlite.rst
licenses/: CHEALPIX_LICENSE.rst  LICENSE.rst  NUMPY_LICENSE.rst  PTEMCEE_LICENSE.rst  TEMPLATE_LICENCE.rst
ligo/skymap/: __init__.py  _astropy_init.py  _distance.c  _moc.c  command.py  conftest.py  distance.py  dpgmm.py  eigenframe.py  healpix_tree.py  kde.py  moc.py  setup_package.py
ligo/skymap/bayestar/: __init__.py  _sky_map.c  command.py  decorator.py  ez_emcee.py  filter.py  interpolation.py  ligolw.py  postprocess.py  ptemcee.py  sky_map.py  timing.py
ligo/skymap/bayestar/tests/: test_bayestar.py  test_interpolation.py  test_signal_amplitude_model.py
ligo/skymap/coordinates/: detector.py  eigenframe.py
ligo/skymap/coordinates/tests/: test_detector.py
ligo/skymap/io/: __init__.py  fits.py  hdf5.py
ligo/skymap/io/events/: __init__.py  base.py  detector_disabled.py  gracedb.py  hdf.py  ligolw.py  magic.py  sqlite.py
ligo/skymap/io/tests/: setup_package.py  test_io_events.py
ligo/skymap/plot/: __init__.py  allsky.py  angle.py  backdrop.py  bayes_factor.py  cmap.py  cylon.csv  cylon.py  itrs_frame_monkeypatch.py  marker.py  ne_simplified_coastline.json  poly.py  pp.py  reproject_from_healpix_moc.py  setup_package.py  util.py
ligo/skymap/plot/tests/: setup_package.py  test_plot.py  test_reproject_from_healpix_moc.py
ligo/skymap/postprocess/: __init__.py  contour.py  cosmology.py  crossmatch.py  detector_frame.py  ellipse.py  find_injection.py  util.py
ligo/skymap/postprocess/tests/: test_cosmology.py  test_crossmatch.py
ligo/skymap/src/: bayestar_distance.c
ligo/skymap/tests/: coveragerc  pytest_ufunc.py  setup_package.py  test_moc.py
ligo/skymap/tool/: __init__.py  bayestar_inject.py  bayestar_localize_coincs.py  bayestar_localize_lvalert.py  bayestar_mcmc.py  bayestar_realize_coincs.py  bayestar_sample_model_psd.py  ligo_skymap_aggregate_found_injections.py  ligo_skymap_combine.py  ligo_skymap_constellations.py  ligo_skymap_contour.py  ligo_skymap_contour_moc.py  ligo_skymap_flatten.py  ligo_skymap_from_samples.py  ligo_skymap_plot.py  ligo_skymap_plot_airmass.py  ligo_skymap_plot_coherence.py  ligo_skymap_plot_found_injections.py  ligo_skymap_plot_observability.py  ligo_skymap_plot_pp_samples.py  ligo_skymap_plot_stats.py  ligo_skymap_plot_volume.py  ligo_skymap_stats.py  ligo_skymap_unflatten.py  matplotlib.py
ligo/skymap/util/: __init__.py  decorator.py  file.py  ilwd.py  lal.py  logging.py  math.py  numpy.py  progress.py  quantile.py  sqlite.py  stopwatch.py
ligo_skymap/: command.py  distance.py  setup_package.py
ligo_skymap/bayestar/: decorator.py  filter.py  postprocess.py  sky_map.py
ligo_skymap/io/: __init__.py  fits.py
ligo_skymap/io/events/: base.py  detector_disabled.py
ligo_skymap/tests/: pytest_ufunc.py
scripts/: bayestar-localize-coincs  bayestar-localize-lvalert  bayestar_plot_allsky  bayestar_plot_found_injections  ligo-skymap-aggregate-found-injections  ligo-skymap-from-samples  ligo-skymap-plot  ligo-skymap-plot-found-injections  ligo-skymap-plot-volume
src/: bayestar_cosmology.h  bayestar_cosmology.py  bayestar_distance.c  bayestar_distance.h  bayestar_moc.c  bayestar_moc.h  bayestar_sky_map.c  bayestar_sky_map.h  branch_prediction.h  core.c  cubic_interp.c  cubic_interp.h  cubic_interp_test.c  find_floor.c  find_floor.h  omp_interruptible.h  vmath.h  warnings.h
(+16 files in other folders)
