[metadata]
name = ligo.skymap
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.9
author = Leo Singer
author_email = leo.singer@ligo.org
description = Tools for reading, writing, manipulating, and making LIGO and Virgo sky maps
license = BSD 3-Clause
url = https://lscsoft.docs.ligo.org/ligo.skymap/
edit_on_github = False
; github_project = astropy/astropy
python_version = ">=3.6"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
namespace_packages = ligo
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =
    bayestar-localize-coincs = ligo.skymap.tool.bayestar_localize_coincs:main
    bayestar-localize-lvalert = ligo.skymap.tool.bayestar_localize_lvalert:main
    bayestar-mcmc = ligo.skymap.tool.bayestar_mcmc:main
    bayestar-realize-coincs = ligo.skymap.tool.bayestar_realize_coincs:main
    bayestar-sample-model-psd = ligo.skymap.tool.bayestar_sample_model_psd:main
    ligo-skymap-combine = ligo.skymap.tool.ligo_skymap_combine:main
    ligo-skymap-contour = ligo.skymap.tool.ligo_skymap_contour:main
    ligo-skymap-flatten = ligo.skymap.tool.ligo_skymap_flatten:main
    ligo-skymap-unflatten = ligo.skymap.tool.ligo_skymap_unflatten:main
    ligo-skymap-from-samples = ligo.skymap.tool.ligo_skymap_from_samples:main
    ligo-skymap-constellations = ligo.skymap.tool.ligo_skymap_constellations:main
    ligo-skymap-plot = ligo.skymap.tool.ligo_skymap_plot:main
    ligo-skymap-plot-airmass = ligo.skymap.tool.ligo_skymap_plot_airmass:main
    ligo-skymap-plot-observability = ligo.skymap.tool.ligo_skymap_plot_observability:main
    ligo-skymap-plot-pp-samples = ligo.skymap.tool.ligo_skymap_plot_pp_samples:main
    ligo-skymap-plot-stats = ligo.skymap.tool.ligo_skymap_plot_stats:main
    ligo-skymap-plot-volume = ligo.skymap.tool.ligo_skymap_plot_volume:main
    ligo-skymap-stats = ligo.skymap.tool.ligo_skymap_stats:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = --doctest-modules

[ah_bootstrap]
auto_use = True

[flake8]
exclude =
    ah_bootstrap.py,  # comes from astropy package template
    astropy_helpers,  # comes from astropy package template
    extern,
    ez_setup.py,  # comes from astropy package template
    setup.py,  # comes from astropy package template
    sphinx,
    *parsetab.py,
    ligo/skymap/conftest.py,  # comes from astropy package template
    ligo/skymap/healpix_tree.py,  # long trailing newlines, skip for now
    ligo/skymap/version.py,  # generated by astropy-helpers
    ligo/skymap/extern,  # not our code
    ligo/skymap/plot/cylon.py  # only included to document how colormap was generated
    setup_package.py,  # comes from astropy package template
    docs/conf.py  # comes from astropy package template
per_file_ignores =
    ligo/skymap/bayestar/__init__.py:N806
    ligo/skymap/bayestar/filter.py:N803,N806
    ligo/skymap/bayestar/tests/test_signal_amplitude_model.py:N806
    ligo/skymap/distance.py:N803,N806
    ligo/skymap/postprocess/cosmology.py:N802,N803,N806
    ligo/skymap/postprocess/find_injection.py:N806
    ligo/skymap/tool/bayestar_realize_coincs.py:N803,N806
    src/bayestar_cosmology.py:N802,N803,N806,N816
