[metadata]
name = ligo.skymap
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.2.1
author = Leo Singer
author_email = leo.singer@ligo.org
description = Tools for reading, writing, manipulating, and making LIGO and Virgo sky maps
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3+
url = https://lscsoft.docs.ligo.org/ligo.skymap/
edit_on_github = True
github_project = lpsinger/ligo.skymap
python_version = ">=3.6"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Bug Tracker = https://git.ligo.org/lscsoft/ligo.skymap/issues
    Documentation = https://lscsoft.docs.ligo.org/ligo.skymap
    Source Code = https://git.ligo.org/lscsoft/ligo.skymap


[options]
namespace_packages = ligo
zip_safe = False
tests_require = astroquery
install_requires =
    astroplan>=0.5
    astropy>=3.1,!=4.0.1  # https://github.com/astropy/reproject/pull/227
    astropy-healpix>=0.3  # https://github.com/astropy/astropy-healpix/pull/106
    healpy
    h5py
    importlib-resources;python_version<'3.7'
    lalsuite>=6.53
    lscsoft-glue>=2.0.0
    ligo-gracedb>=2.0.1
    ligo-segments>=1.2.0
    matplotlib>=3.0.2
    networkx
    numpy>=1.14,!=1.15.3
    pillow>=2.5.0
    ptemcee
    python-ligo-lw
    reproject>=0.3.2
    scipy>=0.14
    tqdm
    pytz

[options.extras_require]
docs =
	sphinx-argparse
	sphinx-astropy
	sphinxcontrib-mermaid

[options.entry_points]
console_scripts =
    bayestar-inject = ligo.skymap.tool.bayestar_inject:main
    bayestar-localize-coincs = ligo.skymap.tool.bayestar_localize_coincs:main
    bayestar-localize-lvalert = ligo.skymap.tool.bayestar_localize_lvalert:main
    bayestar-mcmc = ligo.skymap.tool.bayestar_mcmc:main
    bayestar-realize-coincs = ligo.skymap.tool.bayestar_realize_coincs:main
    bayestar-sample-model-psd = ligo.skymap.tool.bayestar_sample_model_psd:main
    ligo-skymap-combine = ligo.skymap.tool.ligo_skymap_combine:main
    ligo-skymap-contour = ligo.skymap.tool.ligo_skymap_contour:main
    ligo-skymap-contour-moc = ligo.skymap.tool.ligo_skymap_contour_moc:main
    ligo-skymap-flatten = ligo.skymap.tool.ligo_skymap_flatten:main
    ligo-skymap-unflatten = ligo.skymap.tool.ligo_skymap_unflatten:main
    ligo-skymap-from-samples = ligo.skymap.tool.ligo_skymap_from_samples:main
    ligo-skymap-constellations = ligo.skymap.tool.ligo_skymap_constellations:main
    ligo-skymap-plot = ligo.skymap.tool.ligo_skymap_plot:main
    ligo-skymap-plot-airmass = ligo.skymap.tool.ligo_skymap_plot_airmass:main
    ligo-skymap-plot-observability = ligo.skymap.tool.ligo_skymap_plot_observability:main
    ligo-skymap-plot-pp-samples = ligo.skymap.tool.ligo_skymap_plot_pp_samples:main
    ligo-skymap-plot-stats = ligo.skymap.tool.ligo_skymap_plot_stats:main
    ligo-skymap-plot-volume = ligo.skymap.tool.ligo_skymap_plot_volume:main
    ligo-skymap-stats = ligo.skymap.tool.ligo_skymap_stats:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
doctest_ufunc = enabled

[ah_bootstrap]
auto_use = True

[flake8]
ignore = D100,D101,D102,D104,D105,D107,D103,D205,D400,D401,E226,W503,W504
exclude =
    ah_bootstrap.py,  # comes from astropy package template
    astropy_helpers,  # comes from astropy package template
    extern,
    ez_setup.py,  # comes from astropy package template
    setup.py,  # comes from astropy package template
    sphinx,
    *parsetab.py,
    ligo/skymap/conftest.py,  # comes from astropy package template
    ligo/skymap/healpix_tree.py,  # long trailing newlines, skip for now
    ligo/skymap/version.py,  # generated by astropy-helpers
    ligo/skymap/extern,  # not our code
    ligo/skymap/plot/cylon.py  # only included to document how colormap was generated
    setup_package.py,  # comes from astropy package template
    docs/conf.py  # comes from astropy package template
per_file_ignores =
    ligo/skymap/bayestar/__init__.py:N806
    ligo/skymap/bayestar/filter.py:N803,N806
    ligo/skymap/bayestar/tests/test_signal_amplitude_model.py:N806
    ligo/skymap/distance.py:N803,N806
    ligo/skymap/postprocess/cosmology.py:N802,N803,N806
    ligo/skymap/postprocess/crossmatch.py:N806
    ligo/skymap/tool/bayestar_inject.py:E731,N803,N806
    ligo/skymap/tool/bayestar_realize_coincs.py:N803,N806
    ligo/skymap/tool/tests/test_bayestar_inject.py:N803,N806
    src/bayestar_cosmology.py:N802,N803,N806,N816
