[metadata]
name = ligo.skymap
author = Leo Singer
author_email = leo.singer@ligo.org
license = GNU GPL v3+
license_files = licenses/LICENSE.rst
url = https://lscsoft.docs.ligo.org/ligo.skymap/
description = Tools for reading, writing, manipulating, and making LIGO and Virgo sky maps
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = lpsinger/ligo.skymap
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Bug Tracker = https://git.ligo.org/lscsoft/ligo.skymap/issues
    Change Log = https://lscsoft.docs.ligo.org/ligo.skymap/changes.html
    Documentation = https://lscsoft.docs.ligo.org/ligo.skymap
    GitHub = https://github.com/lpsinger/ligo.skymap
    Source Code = https://git.ligo.org/lscsoft/ligo.skymap

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astroplan>=0.7  # https://github.com/astropy/astroplan/issues/479
    astropy>=5.0  # https://github.com/astropy/astropy/pull/12176
    astropy-healpix>=0.3  # https://github.com/astropy/astropy-healpix/pull/106
    healpy
    h5py
    lalsuite>=6.82, !=7.2  # https://git.ligo.org/lscsoft/lalsuite/-/merge_requests/1757
    ligo-gracedb>=2.0.1
    ligo-segments>=1.2.0
    matplotlib>=3.5.0  # https://matplotlib.org/stable/api/prev_api_changes/api_changes_3.6.0.html#pending-deprecation-top-level-cmap-registration-and-access-functions-in-mpl-cm
    networkx
    numpy>=1.19.3, !=1.22.0  # https://github.com/astropy/astropy/issues/12706
    pillow>=2.5.0
    ptemcee
    python-ligo-lw>=1.8.0
    pytz
    reproject>=0.3.2
    scipy>=0.14, !=1.10.0  # https://git.ligo.org/lscsoft/ligo.skymap/-/issues/36
    tqdm>=4.27.0

[options.entry_points]
console_scripts =
    bayestar-inject = ligo.skymap.tool.bayestar_inject:main
    bayestar-localize-coincs = ligo.skymap.tool.bayestar_localize_coincs:main
    bayestar-localize-lvalert = ligo.skymap.tool.bayestar_localize_lvalert:main
    bayestar-mcmc = ligo.skymap.tool.bayestar_mcmc:main
    bayestar-realize-coincs = ligo.skymap.tool.bayestar_realize_coincs:main
    bayestar-sample-model-psd = ligo.skymap.tool.bayestar_sample_model_psd:main
    ligo-skymap-combine = ligo.skymap.tool.ligo_skymap_combine:main
    ligo-skymap-contour = ligo.skymap.tool.ligo_skymap_contour:main
    ligo-skymap-contour-moc = ligo.skymap.tool.ligo_skymap_contour_moc:main
    ligo-skymap-flatten = ligo.skymap.tool.ligo_skymap_flatten:main
    ligo-skymap-unflatten = ligo.skymap.tool.ligo_skymap_unflatten:main
    ligo-skymap-from-samples = ligo.skymap.tool.ligo_skymap_from_samples:main
    ligo-skymap-constellations = ligo.skymap.tool.ligo_skymap_constellations:main
    ligo-skymap-plot = ligo.skymap.tool.ligo_skymap_plot:main
    ligo-skymap-plot-airmass = ligo.skymap.tool.ligo_skymap_plot_airmass:main
    ligo-skymap-plot-coherence = ligo.skymap.tool.ligo_skymap_plot_coherence:main
    ligo-skymap-plot-observability = ligo.skymap.tool.ligo_skymap_plot_observability:main
    ligo-skymap-plot-pp-samples = ligo.skymap.tool.ligo_skymap_plot_pp_samples:main
    ligo-skymap-plot-stats = ligo.skymap.tool.ligo_skymap_plot_stats:main
    ligo-skymap-plot-volume = ligo.skymap.tool.ligo_skymap_plot_volume:main
    ligo-skymap-stats = ligo.skymap.tool.ligo_skymap_stats:main
pytest11 =
    omp-get-num-threads = ligo.skymap.tests.plugins.omp

[options.extras_require]
test =
    astroquery
    pytest-astropy
    pytest-doctestplus >= 0.12.0
    pytest-mpl
docs =
    sphinx >= 4.0
    sphinx-argparse >= 0.3.0  # https://github.com/alex-rudakov/sphinx-argparse/pull/126
    sphinx-astropy
    sphinxcontrib-mermaid >= 0.7.1  # https://github.com/mgaitan/sphinxcontrib-mermaid/issues/72

[options.package_data]
ligo.skymap.io.tests = data/*.hdf5, data/*.xml.gz, data/gstlal_reference_psd/*.xml.gz
ligo.skymap.plot = *.csv, *.json
ligo.skymap.plot.tests = baseline/*.png

[options.packages.find]
include = ligo.*

[tool:pytest]
testpaths = "ligo/skymap"
astropy_header = true
doctest_plus = enabled
doctest_ufunc = enabled
omp_get_num_threads = true

[coverage:run]
source = {packagename}
omit =
    ligo/skymap/_astropy_init*
    ligo/skymap/conftest.py
    ligo/skymap/extern/*
    ligo/skymap/tests/*
    ligo/skymap/*/tests/*
    ligo/skymap/*/*/tests/*
    ligo/skymap/version*
    ligo/skymap/plot/cylon.py  # only used for generating color map
    */ligo/skymap/_astropy_init*
    */ligo/skymap/conftest.py
    */ligo/skymap/extern/*
    */ligo/skymap/tests/*
    */ligo/skymap/*/tests/*
    */ligo/skymap/*/*/tests/*
    */ligo/skymap/version*
    */ligo/skymap/plot/cylon.py  # only used for generating color map

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore = D100,D101,D102,D104,D105,D107,D103,D205,D400,D401,E226,W503,W504
exclude =
    extern,
    setup.py,  # comes from astropy package template
    sphinx,
    *parsetab.py,
    ligo/skymap/conftest.py,  # comes from astropy package template
    ligo/skymap/healpix_tree.py,  # long trailing newlines, skip for now
    ligo/skymap/version.py,  # generated by astropy-helpers
    ligo/skymap/extern,  # not our code
    ligo/skymap/plot/cylon.py  # only included to document how colormap was generated
    docs/conf.py  # comes from astropy package template
per_file_ignores =
    ligo/skymap/bayestar/__init__.py:N806
    ligo/skymap/bayestar/filter.py:N803,N806
    ligo/skymap/bayestar/tests/test_signal_amplitude_model.py:N806
    ligo/skymap/distance.py:N803,N806
    ligo/skymap/postprocess/cosmology.py:N802,N803,N806
    ligo/skymap/postprocess/crossmatch.py:N806
    ligo/skymap/postprocess/tests/test_cosmology.py:N802,N803,N806
    ligo/skymap/tool/bayestar_inject.py:E731,N803,N806
    ligo/skymap/tool/bayestar_realize_coincs.py:N803,N806
    ligo/skymap/tool/tests/test_bayestar_inject.py:N803,N806
    ligo/skymap/util/ilwd.py:N802,N803
    src/bayestar_cosmology.py:N802,N803,N806,N816

[bdist_wheel]
py_limited_api = cp39
